Fixed project info overflow again, misc changes

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -103,5 +103,9 @@
         flex-direction: column;
         padding: 2rem 0;
     }
+
+    #this-project {
+        margin-top: 2rem;
+    }
 }
 
